welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:6: error: type mismatch;
 found   : Unit
 required: Boolean
		return 
                ^Program:12: error: type mismatch;
 found   : Unit
 required: Boolean
}
^