welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
def vuBiscuit():Boolean = {
	
	while (estSurBiscuit()==true){
		return 
	}

avance(7);recule(6);vuBiscuit();

}
}
